@@ -45,6 +45,7 @@ test-suite libtorrent :
 	[ run test_stat_cache.cpp ]
 	[ run test_part_file.cpp ]
 	[ run test_policy.cpp ]
+	[ run test_file_storage.cpp ]
 	[ run test_peer_priority.cpp ]
 	[ run test_file.cpp ]
 	[ run test_threads.cpp ]
